[package]
name = "mimxrt685-eval"
version = "0.1.0"
edition = "2021"

[dependencies]
mimxrt685s-pac = { version = "0.1.5", features = [
    "rt",
    "critical-section",
    "defmt",
] }
mimxrt600-fcb = "0.1.0"
defmt = "0.3.8"
defmt-rtt = "0.4.1"
panic-probe = { version = "0.3.1", features = ["print-defmt"] }

embassy-sync = { git = "https://github.com/embassy-rs/embassy", features = [
    "defmt",
] }
embassy-executor = { version = "0.6.1", features = [
    "arch-cortex-m",
    "executor-thread",
    "executor-interrupt",
    "defmt",
    # "integrated-timers",
] }
embassy-futures = { git = "https://github.com/embassy-rs/embassy" }
embassy-time = { git = "https://github.com/embassy-rs/embassy", features = [
    "defmt",
    "defmt-timestamp-uptime",
] }
embassy-time-driver = { git = "https://github.com/embassy-rs/embassy" }
cortex-m = { version = "0.7.7", features = [
    "inline-asm",
    "critical-section-single-core",
] }
cortex-m-rt = "0.7.5"

[patch.crates-io]
embassy-executor = { git = "https://github.com/embassy-rs/embassy" }

[dev-dependencies]
embedded-test = { version = "0.5.0", features = ["embassy", "defmt"] }

[features]
embassy = ["embedded-test/embassy"]

[[test]]
name = "example_test"
harness = false
